RESOLVED FIXED133598
[Mac] caption size is not update immediately when system preferences change
https://bugs.webkit.org/show_bug.cgi?id=133598
Summary [Mac] caption size is not update immediately when system preferences change
Eric Carlson
Reported 2014-06-06 19:09:06 PDT
Changing the system preference for caption size does not immediately update caption size.
Attachments
Proposed patch. (4.01 KB, patch)
2014-06-06 19:15 PDT, Eric Carlson
no flags
Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2 (479.70 KB, application/zip)
2014-06-06 20:16 PDT, Build Bot
no flags
Archive of layout-test-results from webkit-ews-08 for mac-mountainlion (501.39 KB, application/zip)
2014-06-06 20:40 PDT, Build Bot
no flags
Archive of layout-test-results from webkit-ews-05 for mac-mountainlion (501.33 KB, application/zip)
2014-06-06 21:39 PDT, Build Bot
no flags
Updated patch. (2.65 KB, patch)
2014-06-09 11:00 PDT, Eric Carlson
no flags
Eric Carlson
Comment 1 2014-06-06 19:09:31 PDT
Eric Carlson
Comment 2 2014-06-06 19:15:33 PDT
Created attachment 232644 [details] Proposed patch.
Build Bot
Comment 3 2014-06-06 20:16:51 PDT
Comment on attachment 232644 [details] Proposed patch. Attachment 232644 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/6008604066840576 New failing tests: media/track/regions-webvtt/vtt-region-display.html
Build Bot
Comment 4 2014-06-06 20:16:57 PDT
Created attachment 232645 [details] Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-15 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Build Bot
Comment 5 2014-06-06 20:39:54 PDT
Comment on attachment 232644 [details] Proposed patch. Attachment 232644 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/6151001023184896 New failing tests: media/track/regions-webvtt/vtt-region-display.html
Build Bot
Comment 6 2014-06-06 20:40:00 PDT
Created attachment 232647 [details] Archive of layout-test-results from webkit-ews-08 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-08 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Build Bot
Comment 7 2014-06-06 21:39:31 PDT
Comment on attachment 232644 [details] Proposed patch. Attachment 232644 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/4624696884592640 New failing tests: media/track/regions-webvtt/vtt-region-display.html
Build Bot
Comment 8 2014-06-06 21:39:36 PDT
Created attachment 232652 [details] Archive of layout-test-results from webkit-ews-05 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-05 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Jer Noble
Comment 9 2014-06-09 10:44:45 PDT
Comment on attachment 232644 [details] Proposed patch. r=me, but you may want to look into the vtt test failure. It may just need a rebaseline.
Eric Carlson
Comment 10 2014-06-09 11:00:15 PDT
Created attachment 232714 [details] Updated patch.
WebKit Commit Bot
Comment 11 2014-06-09 12:39:58 PDT
Comment on attachment 232714 [details] Updated patch. Rejecting attachment 232714 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-03', 'validate-changelog', '--check-oops', '--non-interactive', 232714, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in Source/WebCore/ChangeLog contains OOPS!. Full output: http://webkit-queues.appspot.com/results/5780000942850048
Brent Fulgham
Comment 12 2014-06-09 13:32:44 PDT
Comment on attachment 232714 [details] Updated patch. r=me.
WebKit Commit Bot
Comment 13 2014-06-09 14:03:55 PDT
Comment on attachment 232714 [details] Updated patch. Clearing flags on attachment: 232714 Committed r169713: <http://trac.webkit.org/changeset/169713>
WebKit Commit Bot
Comment 14 2014-06-09 14:04:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.