[Mac] caption size is not update immediately when system preferences change https://bugs.webkit.org/show_bug.cgi?id=133598

Reviewed by Brent Fulgham.

* Modules/mediacontrols/MediaControlsHost.cpp:
(WebCore::MediaControlsHost::updateCaptionDisplaySizes): New.
* Modules/mediacontrols/MediaControlsHost.h:

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::captionPreferencesChanged): Tell the controls host to update sizes.


Canonical link: https://commits.webkit.org/151627@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169713 268f45cc-cd09-0410-ab3c-d52691b4dbfc